[gd_scene format=3 uid="uid://bfpmjoj37vhnl"]

[ext_resource type="Script" uid="uid://ct82jpe8xwupy" path="res://ec_assets/objects/purrcent.gd" id="1"]
[ext_resource type="Material" uid="uid://d0gel3gux24hq" path="res://ec_assets/additive.tres" id="2"]
[ext_resource type="Texture2D" uid="uid://b7mj7gor1ck0w" path="res://ec_assets/textures/cattos/other/purrcent-tail.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bdavtxkxdshs1" path="res://ec_assets/textures/cattos/other/purrcent.png" id="4"]
[ext_resource type="Texture2D" uid="uid://blm7fksiuwtos" path="res://ec_assets/textures/cattos/other/purrcent-eye.png" id="5"]
[ext_resource type="Texture2D" uid="uid://csd2fx784b0m6" path="res://ec_assets/textures/cattos/other/purrcent-pupil.png" id="6"]
[ext_resource type="Texture2D" uid="uid://c4jmektgmyfkw" path="res://ec_assets/textures/cattos/other/purrcent-spacesuit.png" id="7"]
[ext_resource type="AudioStream" uid="uid://dwbkoed4ah4r4" path="res://ec_assets/sounds/drywall_footstep1.wav" id="8"]
[ext_resource type="FontFile" uid="uid://cqb672ltyq5wd" path="res://ec_assets/fonts/PIXEARG_.TTF" id="8_dw14n"]
[ext_resource type="Script" uid="uid://b0p6w8lkui4s1" path="res://ec_assets/objects/sound_effect.gd" id="9"]
[ext_resource type="FontFile" uid="uid://disvywawmnoe2" path="res://ec_assets/fonts/chemical-formula.ttf" id="9_ckvio"]
[ext_resource type="AudioStream" uid="uid://b1cncxen750mi" path="res://ec_assets/sounds/jump.mp3" id="10"]
[ext_resource type="AudioStream" uid="uid://l424fvimyg5w" path="res://ec_assets/sounds/splash_metal.wav" id="11"]
[ext_resource type="AudioStream" uid="uid://dc6np3cf1y1ck" path="res://ec_assets/sounds/poof.mp3" id="12"]
[ext_resource type="AudioStream" uid="uid://c7ljcms0yqwon" path="res://ec_assets/sounds/placeparticle.mp3" id="13"]
[ext_resource type="AudioStream" uid="uid://cpymd0gwyq71s" path="res://ec_assets/sounds/geiger3.wav" id="14"]
[ext_resource type="AudioStream" uid="uid://bybx1t8n4wvv5" path="res://ec_assets/sounds/MAUW.wav" id="15"]
[ext_resource type="AudioStream" uid="uid://co2o2gpdp7mvp" path="res://ec_assets/sounds/pop.mp3" id="16"]

[sub_resource type="Gradient" id="Gradient_q70ak"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_h51de"]
gradient = SubResource("Gradient_q70ak")
width = 35
height = 7
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="Gradient" id="Gradient_4qe5s"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="Gradient" id="Gradient_iqw82"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pi6lw"]
gradient = SubResource("Gradient_iqw82")
width = 10
height = 10
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="Gradient" id="Gradient_2krw5"]
offsets = PackedFloat32Array(0, 0.2, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_xtcev"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.85)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3214m"]
gradient = SubResource("Gradient_xtcev")
width = 10
height = 10
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="Curve" id="Curve_cwtup"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2
metadata/_snap_enabled = true

[sub_resource type="Gradient" id="Gradient_4dbav"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_sy7qf"]
gradient = SubResource("Gradient_4dbav")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="Animation" id="Animation_cok34"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pupils/pupil1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pupils/pupil2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("eye1:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("eye2:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("eye3:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("pupils/pupil3:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}

[sub_resource type="Animation" id="Animation_hr2ct"]
resource_name = "blink"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pupils/pupil1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(4, 0.1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pupils/pupil2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(4, 0.1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.2), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("eye1:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(2, 0.5, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.1), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("eye2:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(2, 0.5, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.1), Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("eye3:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.5),
"transitions": PackedFloat32Array(2, 0.5, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.5, 0.1), Vector2(0.5, 0.5)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("pupils/pupil3:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.5),
"transitions": PackedFloat32Array(4, 0.25, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.5, 0.2), Vector2(0.5, 0.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p1ucj"]
_data = {
&"RESET": SubResource("Animation_cok34"),
&"blink": SubResource("Animation_hr2ct")
}

[sub_resource type="Animation" id="Animation_gmetx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("tail:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-2.0944]
}

[sub_resource type="Animation" id="Animation_v650i"]
resource_name = "grabbed"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.0174533, 0.0174533]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("tail:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-2.0944, -2.44346]
}

[sub_resource type="Animation" id="Animation_qh76r"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.02, 0.98)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("tail:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.0872665]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hm61w"]
_data = {
&"RESET": SubResource("Animation_gmetx"),
&"grabbed": SubResource("Animation_v650i"),
&"idle": SubResource("Animation_qh76r")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5bqtc"]
size = Vector2(30, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6i125"]
size = Vector2(16, 56)

[sub_resource type="Gradient" id="Gradient_71gb6"]
offsets = PackedFloat32Array(0.1, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6wfoe"]
gradient = SubResource("Gradient_71gb6")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="Animation" id="Animation_3ui1t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../tempglow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_xcfdw"]
resource_name = "glow"
length = 100.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../tempglow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 3, 6, 10, 20, 100),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0.501961, 0, 0, 0.501961), Color(1, 0.25098, 0, 1), Color(1, 0.752941, 0, 0.752941), Color(1, 1, 1, 0.627451), Color(0, 0.627451, 1, 1), Color(1, 0.627451, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ab68v"]
_data = {
&"RESET": SubResource("Animation_3ui1t"),
&"glow": SubResource("Animation_xcfdw")
}

[sub_resource type="Gradient" id="Gradient_vvh5u"]
offsets = PackedFloat32Array(0.75, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jurf8"]
gradient = SubResource("Gradient_vvh5u")
width = 80
height = 80
fill = 2
fill_from = Vector2(0.5, 0.5)
metadata/_snap_enabled = true

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8ema2"]
radius = 24.0
height = 72.0

[sub_resource type="Gradient" id="Gradient_0lnls"]
offsets = PackedFloat32Array(0.1, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_463md"]
gradient = SubResource("Gradient_0lnls")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="CircleShape2D" id="CircleShape2D_pgo0f"]
radius = 250.0

[node name="purrcent" type="CharacterBody2D" unique_id=418061237]
script = ExtResource("1")

[node name="radiation" type="CPUParticles2D" parent="." unique_id=1277304202]
modulate = Color(0.25098, 0.501961, 1, 1)
z_index = -1
texture_filter = 2
material = ExtResource("2")
emitting = false
amount = 100
texture = SubResource("GradientTexture2D_h51de")
spread = 180.0
gravity = Vector2(0, 0)
angle_max = 720.0
scale_amount_min = 0.0
scale_amount_max = 20.0
color_ramp = SubResource("Gradient_4qe5s")

[node name="gas" type="CPUParticles2D" parent="." unique_id=425760768]
modulate = Color(1, 1, 1, 0.25098)
texture_filter = 2
emitting = false
amount = 50
texture = SubResource("GradientTexture2D_pi6lw")
lifetime = 2.0
emission_shape = 1
emission_sphere_radius = 30.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_max = 10.0
angle_max = 720.0
scale_amount_max = 5.0
color = Color(0, 0, 0, 1)
color_ramp = SubResource("Gradient_2krw5")

[node name="drip" type="CPUParticles2D" parent="." unique_id=30650303]
position = Vector2(0, -12)
emitting = false
amount = 10
texture = SubResource("GradientTexture2D_3214m")
lifetime = 2.0
emission_shape = 3
emission_rect_extents = Vector2(20, 10)
spread = 180.0
gravity = Vector2(0, 100)
scale_amount_min = 0.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_cwtup")
color = Color(0, 0, 0, 1)

[node name="model" type="Node2D" parent="." unique_id=712081874]

[node name="select" type="Sprite2D" parent="model" unique_id=916637820]
visible = false
modulate = Color(1, 1, 1, 0.501961)
texture_filter = 2
material = ExtResource("2")
scale = Vector2(3, 3)
texture = SubResource("GradientTexture2D_sy7qf")

[node name="tail" type="Sprite2D" parent="model" unique_id=1172777180]
modulate = Color(0, 0, 0, 1)
position = Vector2(0, 31)
rotation = -2.0944
texture = ExtResource("3")
offset = Vector2(-18, -18)

[node name="body" type="Sprite2D" parent="model" unique_id=179804153]
position = Vector2(0, -32)
texture = ExtResource("4")

[node name="face" type="Node2D" parent="model" unique_id=1681082251]
position = Vector2(0, -12)

[node name="eye1" type="Sprite2D" parent="model/face" unique_id=1762499244]
position = Vector2(-13, 0)
texture = ExtResource("5")

[node name="eye2" type="Sprite2D" parent="model/face" unique_id=220523556]
position = Vector2(13, 0)
texture = ExtResource("5")
flip_h = true

[node name="eye3" type="Sprite2D" parent="model/face" unique_id=1624133323]
visible = false
position = Vector2(0, -12)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5")
flip_h = true

[node name="pupils" type="Node2D" parent="model/face" unique_id=1101659335]

[node name="pupil1" type="Sprite2D" parent="model/face/pupils" unique_id=2121775951]
position = Vector2(-11, 0)
texture = ExtResource("6")

[node name="pupil2" type="Sprite2D" parent="model/face/pupils" unique_id=729987161]
position = Vector2(11, 0)
texture = ExtResource("6")

[node name="pupil3" type="Sprite2D" parent="model/face/pupils" unique_id=1796145426]
visible = false
position = Vector2(0, -12)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6")

[node name="anim" type="AnimationPlayer" parent="model/face" unique_id=88253374]
libraries/ = SubResource("AnimationLibrary_p1ucj")
autoplay = &"blink"

[node name="spacesuit" type="Sprite2D" parent="model" unique_id=171944773]
visible = false
position = Vector2(0, -32)
texture = ExtResource("7")

[node name="anim" type="AnimationPlayer" parent="model" unique_id=1690973805]
libraries/ = SubResource("AnimationLibrary_hm61w")
autoplay = &"idle"
playback_default_blend_time = 0.5

[node name="col_head" type="CollisionShape2D" parent="." unique_id=82855724]
position = Vector2(0, -12)
rotation = 1.5708
shape = SubResource("RectangleShape2D_5bqtc")
debug_color = Color(1, 1, 1, 0)

[node name="col_body" type="CollisionShape2D" parent="." unique_id=92658089]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_6i125")
debug_color = Color(1, 1, 1, 0)

[node name="tempglow" type="Sprite2D" parent="." unique_id=592804866]
modulate = Color(0, 0, 0, 0)
texture_filter = 2
material = ExtResource("2")
position = Vector2(0, -8)
scale = Vector2(5, 5)
texture = SubResource("GradientTexture2D_6wfoe")

[node name="heat" type="AnimationPlayer" parent="." unique_id=1370792429]
root_node = NodePath("../model")
callback_mode_process = 2
libraries/ = SubResource("AnimationLibrary_ab68v")
autoplay = &"glow"

[node name="info" type="Node2D" parent="." unique_id=1960968991]
z_index = 5
texture_filter = 2

[node name="bg" type="Sprite2D" parent="info" unique_id=409431415]
modulate = Color(1, 1, 1, 0.752941)
position = Vector2(0, -96)
scale = Vector2(1.2, 1.2)
texture = SubResource("GradientTexture2D_jurf8")

[node name="name" type="Label" parent="info" unique_id=2095617064]
texture_filter = 1
offset_left = -128.0
offset_top = -93.0
offset_right = 384.0
offset_bottom = -45.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("8_dw14n")
theme_override_font_sizes/font_size = 24
text = "Purrcent"
horizontal_alignment = 1

[node name="type" type="Label" parent="info" unique_id=1434843352]
texture_filter = 1
offset_left = -40.0
offset_top = -75.0
offset_right = 120.0
offset_bottom = -27.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("8_dw14n")
theme_override_font_sizes/font_size = 8
text = "cat (solid)"
horizontal_alignment = 1

[node name="density" type="Label" parent="info" unique_id=1621011156]
texture_filter = 1
offset_left = -40.0
offset_top = -67.0
offset_right = 120.0
offset_bottom = -19.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("8_dw14n")
theme_override_font_sizes/font_size = 8
text = "density: hes stupid"
horizontal_alignment = 1

[node name="symbol" type="Label" parent="info" unique_id=1673453832]
texture_filter = 1
offset_left = -40.0
offset_top = -149.0
offset_right = 120.0
offset_bottom = -5.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("9_ckvio")
theme_override_font_sizes/font_size = 63
text = ":3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="clank1" type="AudioStreamPlayer2D" parent="." unique_id=1789957705]
stream = ExtResource("8")
volume_db = 5.0
pitch_scale = 2.0
attenuation = 2.0
script = ExtResource("9")

[node name="jump" type="AudioStreamPlayer2D" parent="." unique_id=691461878]
stream = ExtResource("10")
volume_db = 5.0
attenuation = 2.0
script = ExtResource("9")

[node name="splash" type="AudioStreamPlayer2D" parent="." unique_id=673249854]
stream = ExtResource("11")
pitch_scale = 2.0
attenuation = 2.0
script = ExtResource("9")

[node name="poof" type="AudioStreamPlayer2D" parent="." unique_id=564784481]
stream = ExtResource("12")
pitch_scale = 1.5
script = ExtResource("9")

[node name="spawn" type="AudioStreamPlayer2D" parent="." unique_id=1598896456]
stream = ExtResource("13")
volume_db = 5.0
script = ExtResource("9")

[node name="geiger" type="AudioStreamPlayer2D" parent="." unique_id=1479216156]
stream = ExtResource("14")
pitch_scale = 1.5
max_distance = 1000.0
attenuation = 2.0
script = ExtResource("9")

[node name="meow" type="AudioStreamPlayer2D" parent="." unique_id=145794320]
stream = ExtResource("15")
volume_db = 5.0
attenuation = 2.0
script = ExtResource("9")

[node name="pop" type="AudioStreamPlayer2D" parent="." unique_id=1423529682]
stream = ExtResource("16")
volume_db = 5.0
attenuation = 2.0
script = ExtResource("9")

[node name="Area2D" type="Area2D" parent="." unique_id=929083676]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=1355682460]
shape = SubResource("CapsuleShape2D_8ema2")
debug_color = Color(1, 0, 0, 0)

[node name="flash" type="Sprite2D" parent="." unique_id=305150209]
modulate = Color(1, 1, 1, 0)
texture_filter = 2
material = ExtResource("2")
scale = Vector2(4, 4)
texture = SubResource("GradientTexture2D_463md")

[node name="range" type="Area2D" parent="." unique_id=502486031]

[node name="CollisionShape2D" type="CollisionShape2D" parent="range" unique_id=420025419]
shape = SubResource("CircleShape2D_pgo0f")
debug_color = Color(1, 1, 0, 0)

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_entered"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_mouse_exited"]
[connection signal="body_entered" from="range" to="." method="_on_range_body_entered"]
